Modify SkinFetcher for our servers